@@ -14,6 +14,18 @@ java {
 	}
 }
 
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
+tasks.withType(JavaCompile).configureEach {
+	options.release = 25
+	options.encoding = 'UTF-8'
+	options.compilerArgs += ['--enable-preview']
+}
+
 repositories {
 	mavenCentral()
 }
@@ -41,4 +53,5 @@ dependencyManagement {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs '--enable-preview'
 }
